<resources>
    <string name="app_name">Sirio</string>
    <string name="content_description">image</string>
    <string name="title_login">CONNEXION</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="lbl_forgot_password">Mot de passe oublié?</string>
    <string name="btn_lbl_login">Connexion</string>
    <string name="don_t_have_an_account">Pas de compte?</string>
    <string name="register"><u>Inscription</u></string>
    <string name="create_an_account">CREER UN COMPTER</string>
    <string name="hint_last_name">Nom de famille</string>
    <string name="hint_first_name">Prénom</string>
    <string name="hint_confirm_password">Confirmer le mot de passe</string>
    <string name="i_agree_to_the_terms_and_condition">Je suis d\'accord avec les conditions générales utilisation  </string>
    <string name="btn_lbl_register">Inscription</string>
    <string name="already_have_an_account">Vous avez déjà un compte?</string>
    <string name="login"><u>Connexion</u></string>
    <string name="err_msg_enter_first_name">Veuillez entrer votre prénom.</string>
    <string name="err_msg_enter_last_name">Veuillez entrer votre nom.</string>
    <string name="err_msg_enter_email">Veuillez entrer votre email.</string>
    <string name="err_msg_enter_password">Veuillez entrer votre mot de passe.</string>
    <string name="err_msg_enter_confirm_password">Veuillez confirmer votre mot de passe.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Le mot de passe et sa confirmation ne sont pas similaires.</string>
    <string name="err_msg_agree_terms_and_condition">Vueillez accepter les conditions.</string>
    <string name="signup_success">Merci de vous être inscris</string>
    <string name="please_wait">Veuillez patienter</string>
    <string name="title_forgot_password">MOT DE PASSE OUBLIE?</string>
    <string name="forgot_password_title_description"> Entrez votre email un mail vous seras envoyé pour modifier votre mot de passe.</string>
    <string name="btn_lbl_submit">Envoyer</string>
    <string name="email_sent_success">\"Email envoyer avec succès! \"</string>
    <string name="complete_profile">COMPLETEZ LE PROFILE</string>
    <string name="hint_mobile_number">Numéro de téléphone</string>
    <string name="lbl_male">HOMME</string>
    <string name="lbl_female">FEMME</string>
    <string name="lbl_save">Sauvegarder</string>
    <string name="read_permission_denied">//</string>
    <string name="image_selection_failed">//</string>
    <string name="err_msg_enter_mobile_number">Veuillez entrer un numéro de téléphone.</string>
    <string name="profile_update_success">Vôtre profile a bien été mise à jour.</string>
    <string name="title_activity_dashboard">//</string>
    <string name="title_home">Accueil</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_click_back_again_to_exit">Appuyer encore une fois pour revenir en arrière.</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_product">Produits</string>
    <string name="title_order">Commandes</string>
    <string name="settings">Options</string>
    <string name="title_settings">Options</string>
    <string name="lbl_edit">Editer</string>
    <string name="lbl_addresses">Adresses</string>
    <string name="btn_logout">Déconnexion</string>
    <string name="edit_profile">EDITER LE PROFILE</string>
    <string name="title_product_details">Détails du produit</string>
    <string name="lbl_product_description">Description du produit</string>
    <string name="lbl_product_stock_quantity">Quantité disponible</string>
    <string name="product_uploaded_success_message">//</string>
    <string name="no_products_added_yet">//</string>
    <string name="no_dashboard_item_found">Pas de produits ici</string>
    <string name="product_delete_success_message">//.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">//</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="action_add_product">Add Product</string>
    <string name="title_add_product">ADD PRODUCT</string>
    <string name="et_hint_product_title">Nom du produit</string>
    <string name="et_hint_product_price">Prix du produit (€)</string>
    <string name="et_hint_product_description">Description du produit</string>
    <string name="et_hint_product_quantity">Quantité du produit</string>
    <string name="read_storage_permission_denied">//</string>
    <string name="err_msg_select_product_image">//</string>
    <string name="err_msg_enter_product_title">//</string>
    <string name="err_msg_enter_product_price">//</string>
    <string name="err_msg_enter_product_description">//</string>
    <string name="err_msg_enter_product_quantity">//</string>
    <string name="btn_add_to_cart">AJOUTER AU PANIER</string>
    <string name="message_item_added_to_cart">Produit ajouter au panier!.</string>
    <string name="btn_go_to_cart">Aller au panier</string>
    <string name="title_my_cart">Mon panier</string>
    <string name="no_cart_item_found">Pas de produit dans le panier</string>
    <string name="subtotal">Total</string>
    <string name="shipping_charge">Frais de port</string>
    <string name="total_amount">Montant Total</string>
    <string name="btn_checkout">Valider</string>
    <string name="action_cart">Mon panier</string>
    <string name="out_of_stock">RUPTURE DE STOCK</string>
    <string name="msg_item_removed_successfully">//.</string>
    <string name="msg_for_available_stock">//</string>
    <string name="title_address_list">Liste des adresses</string>
    <string name="no_address_found">Aucune adresse trouvée!</string>
    <string name="lbL_add_address">Ajouter une adresse</string>
    <string name="title_add_address">AJOUTER UNE ADRESSE</string>
    <string name="hint_full_name">Nom</string>
    <string name="hint_phone_number">Numéro de téléphone</string>
    <string name="hint_address">Adresse</string>
    <string name="hint_zip_code">Code Postale</string>
    <string name="hint_additional_note">Détails optionnels</string>
    <string name="hint_other_details">Autre détails</string>
    <string name="err_msg_please_enter_full_name">Veuillez entrer votre nom.</string>
    <string name="err_msg_please_enter_phone_number">Veuillez entrer votre numéro de téléphone.</string>
    <string name="err_msg_please_enter_address">Veuillez entrer votre adresse.</string>
    <string name="err_msg_please_enter_zip_code">Veuillez entrer votre code postale</string>
    <string name="err_msg_please_enter_other_details">Veuillez entrer les détails suplémentaires</string>
    <string name="err_your_address_added_successfully">Votre adresse a bien été ajouter.</string>
    <string name="err_your_address_updated_successfully">Votre adresse a bien été mise à jour.</string>
    <string name="title_edit_address">EDITER L\'ADRESSE</string>
    <string name="btn_update">METTRE A JOUR</string>
    <string name="err_your_address_deleted_successfully">Votre adresse a bien été supprimer.</string>
    <string name="title_select_address">SELECTIONER ADRESSE</string>
    <string name="title_checkout">Récapitulatif</string>
    <string name="checkout_lbl_product_items">Liste des produits</string>
    <string name="checkout_lbl_selected_address">Adresse sélectionné</string>
    <string name="checkout_lbl_items_receipt">Reçu produits</string>
    <string name="lbl_payment_mode">Mode de paiement</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="no_orders_placed_yet">Pas de commandes</string>
    <string name="title_my_order_details">Mes commandes</string>
    <string name="order_details_lbl">Détails de la commande</string>
    <string name="order_details_lbl_order_id">Id</string>
    <string name="order_details_lbl_order_date">Date de livraison</string>
    <string name="order_details_lbl_order_status">Status de livraison</string>
    <string name="order_details_lbl_shipping_address">Addresse de livraison</string>
    <string name="order_status_in_process">En cours de livraison</string>
    <string name="no_products_sold_out_yet">No products sold out yet!</string>
    <string name="title_sold_product_details">SOLD PRODUCT DETAILS</string>
    <string name="title_cash">PAIEMENT</string>
    <string name="btn_validate_cash">Valider le paiement</string>
    <string name="name_card">Nom de carte</string>
    <string name="card_name">Nom de carte</string>
    <string name="card_number">Numéro de carte</string>
    <string name="date_exp">Date d\'expiration</string>
    <string name="CVV">CVV</string>
    <string name="btn_payment_method">Méthode de paiement</string>
    <string name="order_status_pending">En attente</string>
    <string name="order_status_delivered">Livrée</string>
    <string name="err_msg_enter_card_name">Veuillez entrer le nom de famille inscrit sur la carte</string>
    <string name="err_msg_enter_card_number">Veuillez entrer le numéro de carte</string>
    <string name="err_msg_enter_date_exp">Veuillez entrer la date d\'expiration</string>
    <string name="err_msg_enter_cvv">Veuillez entrer le CVV</string>


</resources>