<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.act.ForgotPasswordActivity">

    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/logo_forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:background="@drawable/siriopng" />


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_forgot_password_activity"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="top" />
    </FrameLayout>

    <com.example.sirioecommerceapp.utils.BoldTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/title_forgot_password"
        android:textColor="@color/first_text"
        android:textSize="@dimen/forgot_password_title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header_image" />

    <com.example.sirioecommerceapp.utils.BoldTextView
        android:id="@+id/tv_title_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/forgot_password_title_description"
        android:textColor="@color/black"
        android:textSize="@dimen/forgot_password_title_description_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


<com.google.android.material.textfield.TextInputLayout
 android:id="@+id/til_email"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:layout_marginStart="16dp"
 android:layout_marginTop="35dp"
 android:layout_marginEnd="16dp"
 android:hint="@string/hint_email"
 android:textColorHint="@color/second_text"
 app:layout_constraintEnd_toEndOf="parent"
 app:layout_constraintStart_toStartOf="parent"
 app:layout_constraintTop_toBottomOf="@id/tv_title_description">

 <com.example.sirioecommerceapp.utils.EditText
     android:id="@+id/email"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:inputType="text"
     android:padding="@dimen/et_padding"
     android:textColor="@color/first_text"
     android:textSize="@dimen/et_textSize" />
</com.google.android.material.textfield.TextInputLayout>

<Button
 android:id="@+id/btn_submit"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:layout_gravity="center"
 android:layout_marginStart="16dp"
 android:layout_marginTop="30dp"
 android:layout_marginEnd="16dp"
 android:background="@drawable/background_button"
 android:foreground="?attr/selectableItemBackground"
 android:gravity="center"
 android:paddingTop="@dimen/btn_padding"
 android:paddingBottom="@dimen/btn_padding"
 android:text="@string/btn_lbl_submit"
 android:textColor="@android:color/white"
 android:textSize="@dimen/btn_textSize"
 app:layout_constraintEnd_toEndOf="parent"
 app:layout_constraintStart_toStartOf="parent"
 app:layout_constraintTop_toBottomOf="@id/til_email" />

</androidx.constraintlayout.widget.ConstraintLayout>
